@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 package ghidra.app.plugin.core.debug.service.tracemgr;
+
+import static ghidra.framework.main.DataTreeDialogType.OPEN;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
@@ -26,10 +28,13 @@ import java.util.stream.Stream;
 import docking.ActionContext;
 import docking.action.DockingAction;
 import docking.action.ToggleDockingAction;
+import docking.widgets.OptionDialog;
 import ghidra.app.plugin.PluginCategoryNames;
 import ghidra.app.plugin.core.debug.DebuggerPluginPackage;
 import ghidra.app.plugin.core.debug.event.*;
 import ghidra.app.plugin.core.debug.gui.DebuggerResources.*;
+import ghidra.app.plugin.core.debug.gui.control.DisconnectTask;
+import ghidra.app.plugin.core.debug.gui.control.TargetActionTask;
 import ghidra.app.services.*;
 import ghidra.app.services.DebuggerControlService.ControlModeChangeListener;
 import ghidra.async.*;
@@ -135,8 +140,8 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 
 		private void threadDeleted(TraceThread thread) {
 			synchronized (listenersByTrace) {
-				DebuggerCoordinates last = lastCoordsByTrace.get(trace);
-				if (last != null && last.getThread() == thread) {
+				LastCoords last = lastCoordsByTrace.get(trace);
+				if (last != null && last.coords.getThread() == thread) {
 					lastCoordsByTrace.remove(trace);
 				}
 			}
@@ -253,7 +258,7 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 			}
 			DebuggerCoordinates coords = current;
 			TraceObjectKeyPath focus = curTarget.getFocus();
-			if (focus != null && synchronizeActive.get()) {
+			if (focus != null) {
 				coords = coords.path(focus);
 			}
 			coords = coords.snap(curTarget.getSnap());
@@ -261,7 +266,20 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 		}
 	}
 
-	protected final Map<Trace, DebuggerCoordinates> lastCoordsByTrace = new WeakHashMap<>();
+	protected record LastCoords(Long time, DebuggerCoordinates coords) {
+
+		public static final LastCoords NEVER = new LastCoords(null, DebuggerCoordinates.NOWHERE);
+
+		public LastCoords(DebuggerCoordinates coords) {
+			this(System.currentTimeMillis(), coords);
+		}
+
+		public LastCoords keepTime(DebuggerCoordinates adjusted) {
+			return new LastCoords(time, adjusted);
+		}
+	}
+
+	protected final Map<Trace, LastCoords> lastCoordsByTrace = new WeakHashMap<>();
 	protected final Map<Trace, ListenerForTraceChanges> listenersByTrace = new WeakHashMap<>();
 	protected final Set<Trace> tracesView = Collections.unmodifiableSet(listenersByTrace.keySet());
 
@@ -274,9 +292,9 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 	@AutoConfigStateField(codec = BooleanAsyncConfigFieldCodec.class)
 	protected final AsyncReference<Boolean, Void> saveTracesByDefault = new AsyncReference<>(true);
 	@AutoConfigStateField(codec = BooleanAsyncConfigFieldCodec.class)
-	protected final AsyncReference<Boolean, Void> synchronizeActive = new AsyncReference<>(true);
-	@AutoConfigStateField(codec = BooleanAsyncConfigFieldCodec.class)
 	protected final AsyncReference<Boolean, Void> autoCloseOnTerminate = new AsyncReference<>(true);
+	// Do not save this one, it's for testing only
+	protected boolean ensureActiveTrace = true;
 
 	// @AutoServiceConsumed via method
 	private DebuggerTargetService targetService;
@@ -414,12 +432,7 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 			}
 		};
 
-		// TODO regarding the hack note below, I believe this issue ahs been fixed, but not sure how to test
-		return new DataTreeDialog(null, OpenTraceAction.NAME, DataTreeDialog.OPEN, filter) {
-			{ // TODO/HACK: Why the NPE if I don't do this?
-				dialogShown();
-			}
-		};
+		return new DataTreeDialog(null, OpenTraceAction.NAME, OPEN, filter);
 	}
 
 	public DomainFile askTrace(Trace trace) {
@@ -433,37 +446,22 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 
 	@Override
 	public void closeAllTraces() {
-		Swing.runIfSwingOrRunLater(() -> {
-			for (Trace trace : getOpenTraces()) {
-				closeTrace(trace);
-			}
-		});
+		checkCloseTraces(getOpenTraces(), false);
 	}
 
 	@Override
 	public void closeOtherTraces(Trace keep) {
-		Swing.runIfSwingOrRunLater(() -> {
-			for (Trace trace : getOpenTraces()) {
-				if (trace != keep) {
-					closeTrace(trace);
-				}
-			}
-		});
+		checkCloseTraces(getOpenTraces().stream().filter(t -> t != keep).toList(), false);
 	}
 
 	@Override
 	public void closeDeadTraces() {
-		Swing.runIfSwingOrRunLater(() -> {
-			if (targetService == null) {
-				return;
-			}
-			for (Trace trace : getOpenTraces()) {
-				Target target = targetService.getTarget(trace);
-				if (target == null) {
-					closeTrace(trace);
-				}
-			}
-		});
+		checkCloseTraces(targetService == null
+				? getOpenTraces()
+				: getOpenTraces().stream()
+						.filter(t -> targetService.getTarget(t) == null)
+						.toList(),
+			false);
 	}
 
 	@AutoServiceConsumed
@@ -551,7 +549,7 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 			}
 			current = newCurrent;
 			if (newCurrent.getTrace() != null) {
-				lastCoordsByTrace.put(newCurrent.getTrace(), newCurrent);
+				lastCoordsByTrace.put(newCurrent.getTrace(), new LastCoords(newCurrent));
 			}
 		}
 		contextChanged();
@@ -569,7 +567,8 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 				newCurrent = newCurrent.snap(target.getSnap());
 			}
 		}
-		if (!doSetCurrent(newCurrent)) {
+		newCurrent = validateCoordiantes(newCurrent, cause);
+		if (newCurrent == null || !doSetCurrent(newCurrent)) {
 			return null;
 		}
 		return newCurrent;
@@ -583,10 +582,21 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 		tool.contextChanged(null);
 	}
 
+	private ControlMode getEffectiveControlMode(Trace trace) {
+		if (trace == null) {
+			return ControlMode.RO_TRACE;
+		}
+		return controlService == null ? ControlMode.DEFAULT : controlService.getCurrentMode(trace);
+	}
+
+	private DebuggerCoordinates validateCoordiantes(DebuggerCoordinates coordinates,
+			ActivationCause cause) {
+		ControlMode mode = getEffectiveControlMode(coordinates.getTrace());
+		return mode.validateCoordinates(tool, coordinates, cause);
+	}
+
 	private boolean isFollowsPresent(Trace trace) {
-		ControlMode mode = controlService == null
-				? ControlMode.DEFAULT
-				: controlService.getCurrentMode(trace);
+		ControlMode mode = getEffectiveControlMode(trace);
 		return mode.followsPresent();
 	}
 
@@ -600,11 +610,10 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 			if (!listenersByTrace.containsKey(trace)) {
 				return;
 			}
-			DebuggerCoordinates cur =
-				lastCoordsByTrace.getOrDefault(trace, DebuggerCoordinates.NOWHERE);
+			LastCoords cur = lastCoordsByTrace.getOrDefault(trace, LastCoords.NEVER);
 			DebuggerCoordinates adj =
-				cur.platform(getPlatformForMapper(trace, cur.getObject(), mapper));
-			lastCoordsByTrace.put(trace, adj);
+				cur.coords.platform(getPlatformForMapper(trace, cur.coords.getObject(), mapper));
+			lastCoordsByTrace.put(trace, cur.keepTime(adj));
 			if (trace == current.getTrace()) {
 				current = adj;
 				fireLocationEvent(adj, ActivationCause.MAPPER_CHANGED);
@@ -628,9 +637,6 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 			return;
 		}
 		DebuggerCoordinates toActivate = current.target(target);
-		if (isFollowsPresent(current.getTrace())) {
-			toActivate = toActivate.snap(target.getSnap());
-		}
 		activate(toActivate, ActivationCause.FOLLOW_PRESENT);
 	}
 
@@ -650,7 +656,9 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 
 	@Override
 	public synchronized Collection<Trace> getOpenTraces() {
-		return Set.copyOf(tracesView);
+		synchronized (listenersByTrace) {
+			return Set.copyOf(tracesView);
+		}
 	}
 
 	@Override
@@ -663,7 +671,7 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 		synchronized (listenersByTrace) {
 			// If known, fill in target ASAP, so it determines the time
 			return fillInTarget(trace,
-				lastCoordsByTrace.getOrDefault(trace, DebuggerCoordinates.NOWHERE));
+				lastCoordsByTrace.getOrDefault(trace, LastCoords.NEVER).coords);
 		}
 	}
 
@@ -910,6 +918,7 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 			}
 
 			new TaskLauncher(new Task("Save New Trace", true, true, true) {
+
 				@Override
 				public void run(TaskMonitor monitor) throws CancelledException {
 					String filename = trace.getName();
@@ -951,6 +960,7 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 						future.completeExceptionally(e);
 					}
 				}
+
 			});
 		}
 		return future;
@@ -974,31 +984,84 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 			navigationHistoryService.clear(trace.getProgramView());
 		}
 		synchronized (listenersByTrace) {
-			trace.release(this);
 			lastCoordsByTrace.remove(trace);
 			trace.removeListener(listenersByTrace.remove(trace));
 			//Msg.debug(this, "Remaining Consumers of " + trace + ": " + trace.getConsumerList());
 		}
-		if (current.getTrace() == trace) {
-			activate(DebuggerCoordinates.NOWHERE, ActivationCause.ACTIVATE_DEFAULT);
+		try {
+			if (current.getTrace() == trace) {
+				activate(DebuggerCoordinates.NOWHERE, ActivationCause.ACTIVATE_DEFAULT);
+			}
+			else {
+				contextChanged();
+			}
 		}
-		else {
-			contextChanged();
+		finally {
+			trace.release(this);
 		}
+	}
+
+	protected void doCloseTraces(Collection<Trace> traces, Collection<Target> targets) {
+		for (Trace t : traces) {
+			if (t.getConsumerList().contains(this)) {
+				doTraceClosed(t);
+				firePluginEvent(new TraceClosedPluginEvent(getName(), t));
+			}
+		}
+		TargetActionTask.executeTask(tool, new DisconnectTask(tool, targets));
+	}
+
+	protected static final String MSGPAT_TERMINATE = """
+			<html>
+			  <body width="300px">
+			    <p>This will terminate the following targets:</p>
+			    <ul>
+			      %s
+			    </ul>
+			    <p>Proceed?</p>
+			  </body>
+			</html>
+			""";
+
+	protected static String formatTargets(Collection<Target> targets) {
+		return targets.stream()
+				.map(t -> "<li>%s</li>".formatted(HTMLUtilities.escapeHTML(t.describe())))
+				.sorted()
+				.collect(Collectors.joining("\n"));
+	}
+
+	protected void checkCloseTraces(Collection<Trace> traces, boolean noConfirm) {
+		List<Target> live =
+			traces.stream()
+					.map(t -> targetService.getTarget(t))
+					.filter(t -> t != null)
+					.toList();
+		/**
+		 * A provider may be reading a trace, likely via the Swing thread, so schedule this on the
+		 * same thread to avoid a ClosedException.
+		 */
+		Swing.runIfSwingOrRunLater(() -> {
+			if (live.isEmpty() || noConfirm) {
+				doCloseTraces(traces, live);
+				return;
+			}
+			String msg = MSGPAT_TERMINATE.formatted(formatTargets(live));
+			int response = OptionDialog.showYesNoDialog(null, "Terminate", msg);
+			switch (response) {
+				case OptionDialog.YES_OPTION -> doCloseTraces(traces, live);
+				case OptionDialog.NO_OPTION -> List.of();
+			}
+		});
 	}
 
 	@Override
 	public void closeTrace(Trace trace) {
-		/**
-		 * A provider may be reading the trace, likely via the Swing thread, so schedule this on the
-		 * same thread to avoid a ClosedException.
-		 */
-		Swing.runIfSwingOrRunLater(() -> {
-			if (trace.getConsumerList().contains(this)) {
-				firePluginEvent(new TraceClosedPluginEvent(getName(), trace));
-				doTraceClosed(trace);
-			}
-		});
+		checkCloseTraces(List.of(trace), false);
+	}
+
+	@Override
+	public void closeTraceNoConfirm(Trace trace) {
+		checkCloseTraces(List.of(trace), true);
 	}
 
 	@Override
@@ -1027,6 +1090,20 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 		return elem.toString();
 	}
 
+	/**
+	 * Gets the most recent coordinates among those traces still open
+	 */
+	protected DebuggerCoordinates getMostRecentCoordinates() {
+		synchronized (listenersByTrace) {
+			return lastCoordsByTrace.values()
+					.stream()
+					.sorted(Comparator.comparing(l -> -l.time))
+					.findFirst()
+					.map(l -> l.coords)
+					.orElse(DebuggerCoordinates.NOWHERE);
+		}
+	}
+
 	@Override
 	public CompletableFuture<Void> activateAndNotify(DebuggerCoordinates coordinates,
 			ActivationCause cause) {
@@ -1041,21 +1118,17 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 				throw new IllegalStateException(
 					"Trace must be opened before activated: " + newTrace);
 			}
+			if (newTrace == null && ensureActiveTrace) {
+				coordinates = getMostRecentCoordinates(); // Might still be NOWHERE
+			}
 		}
 
-		if (!synchronizeActive.get() && cause == ActivationCause.SYNC_MODEL) {
-			return AsyncUtils.nil();
-		}
 		if (cause == ActivationCause.FOLLOW_PRESENT) {
 			if (!isFollowsPresent(newTrace)) {
 				return AsyncUtils.nil();
 			}
 			if (current.getTrace() != newTrace) {
-				/**
-				 * The snap needs to match upon re-activating this trace, lest it look like the user
-				 * intentionally navigated to the past. That may cause the control mode to switch
-				 * off of "Target."
-				 */
+				// The snap needs to match upon re-activating this trace.
 				try {
 					newTrace.getProgramView().setSnap(coordinates.getViewSnap());
 				}
@@ -1082,7 +1155,7 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 				return null;
 			});
 
-		if (!synchronizeActive.get() || cause != ActivationCause.USER) {
+		if (cause != ActivationCause.USER) {
 			return future;
 		}
 		Target target = resolved.getTarget();
@@ -1150,27 +1223,6 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 	@Override
 	public DebuggerCoordinates resolveObject(TraceObject object) {
 		return current.object(object);
-	}
-
-	@Override
-	public void setSynchronizeActive(boolean enabled) {
-		synchronizeActive.set(enabled, null);
-		// TODO: Which action to take here, if any?
-	}
-
-	@Override
-	public boolean isSynchronizeActive() {
-		return synchronizeActive.get();
-	}
-
-	@Override
-	public void addSynchronizeActiveChangeListener(BooleanChangeAdapter listener) {
-		synchronizeActive.addChangeListener(listener);
-	}
-
-	@Override
-	public void removeSynchronizeActiveChangeListener(BooleanChangeAdapter listener) {
-		synchronizeActive.removeChangeListener(listener);
 	}
 
 	@Override
@@ -1249,8 +1301,13 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 			traces = tracesView.stream().filter(t -> {
 				ProjectLocator loc = t.getDomainFile().getProjectLocator();
 				return loc != null && !loc.isTransient();
-			}).collect(Collectors.toList());
-			coordsByTrace = Map.copyOf(lastCoordsByTrace);
+			}).sorted(Comparator.comparingLong(t -> {
+				LastCoords last = lastCoordsByTrace.get(t);
+				return last == null ? -1 : last.time;
+			})).toList();
+			coordsByTrace = lastCoordsByTrace.entrySet()
+					.stream()
+					.collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue().coords));
 		}
 
 		saveState.putInt(KEY_TRACE_COUNT, traces.size());
@@ -1267,6 +1324,7 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 	@Override
 	public void readDataState(SaveState saveState) {
 		synchronized (listenersByTrace) {
+			long baseTime = System.currentTimeMillis();
 			int traceCount = saveState.getInt(KEY_TRACE_COUNT, 0);
 			for (int index = 0; index < traceCount; index++) {
 				String stateName = PREFIX_OPEN_TRACE + index;
@@ -1274,7 +1332,8 @@ public class DebuggerTraceManagerServicePlugin extends Plugin
 				DebuggerCoordinates coords =
 					DebuggerCoordinates.readDataState(tool, saveState, stateName);
 				if (coords.getTrace() != null) {
-					lastCoordsByTrace.put(coords.getTrace(), coords);
+					lastCoordsByTrace.put(coords.getTrace(),
+						new LastCoords(baseTime + index, coords));
 				}
 			}
 		}
